# DavidScovel

./: README.md
LunarLander/: CMakeLists.txt  README.md  doxyfile
LunarLander/Xcode/: CMakeCache.txt  cmake_install.cmake
LunarLander/Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
LunarLander/Xcode/Debug/: testSFML
LunarLander/Xcode/testSFML.xcodeproj/: project.pbxproj
LunarLander/html/: annotated.html  class_platform-members.html  class_platform.html  class_ship-members.html  class_ship.html  class_world-members.html  class_world.html  classes.html  files.html  index.html  platforms_8hpp_source.html  spaceship_8hpp_source.html  terrain_8hpp_source.html  worldclass_8hpp_source.html
LunarLander/html/search/: all_1.js  all_2.js  classes_0.js  classes_1.js  classes_2.js  searchdata.js
LunarLander/latex/: annotated.tex  class_platform.tex  class_ship.tex  class_world.tex  refman.tex
LunarLander/src/: catchTests.cpp  helloSFML.cpp  platforms.cpp  platforms.hpp  spaceship.cpp  spaceship.hpp  terrain.cpp  terrain.hpp  worldclass.cpp  worldclass.hpp
MSDScript/: MSDScriptDocumentation.docx  README.md  ~$DScriptDocumentation.docx
MSDScript/msdScript/: CMakeLists.txt  Cont.cpp  Cont.h  Env.cpp  Env.h  Expr.cpp  Expr.h  Step.cpp  Step.h  calc.cpp  calc.h  catch.hpp  exec.cpp  exec.hpp  main.cpp  msdScriptLib.h  parse.cpp  parse.h  pointer.h  runner_main.cpp  test.cpp  value.cpp  value.h
RouletteStrategy/: README.md
Synthesizer/: README.md
(+61 files in other folders)
